Fix: double spinning plate size on mobile

--- a/components/ClassTypes.module.css
+++ b/components/ClassTypes.module.css
@@ -92,8 +92,8 @@
   .right {
     position: absolute;
     top: 0;
-    right: -33%;
-    width: 50%;
+    right: -66%;
+    width: 100%;
     height: 100%;
     min-height: unset;
     margin: 0;
